--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/kensteph/todo-react-exercice",
+  "homepage": "https://kensteph.github.io/todo-react-exercice",
   "name": "todo-react-exercice",
   "private": true,
   "version": "0.0.0",
